Fixed screen size issue

--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>SmartSchoolSystem</title>
+<title>Notification</title>
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
@@ -20,8 +20,8 @@
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 360px;
-		height: 640px;
+		width: 414px;
+		height: 736px;
 		font-family: "Helvetica";
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
@@ -35,25 +35,25 @@
 	#Reminder {
 		opacity: 1;
 		position: absolute;
-		width: 359px;
-		height: 460px;
+		width: 413px;
+		height: 598px;
 		left: 0.5px;
 		top: 72px;
 		overflow: hidden;
 	}
-	#Reminder_A1_Group_10 {
+	#Reminder_A1_Group_9 {
 		opacity: 1;
 		position: absolute;
-		width: 375px;
-		height: 140.5px;
+		width: 414px;
+		height: 138.5px;
 		left: 0px;
-		top: 0px;
+		top: 2px;
 		overflow: visible;
 	}
 	#Notification_here {
 		opacity: 1;
 		position: absolute;
-		left: 60.5px;
+		left: 79.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -71,7 +71,7 @@
 	#Lorem_Ipsum_is_simply_dummy_te {
 		opacity: 1;
 		position: absolute;
-		left: 19.5px;
+		left: 38.5px;
 		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
@@ -101,24 +101,24 @@
 	.divider {
 		overflow: visible;
 		position: absolute;
-		top: 140.5px;
+		top: 137.5px;
 		left: 0px;
-		width: 375px;
-		height: 1px;
+		width: 414.002px;
+		height: 2px;
 	}
-	#Reminder_A1_Group_11 {
+	#Reminder_A1_Group_10 {
 		opacity: 1;
 		position: absolute;
-		width: 375px;
-		height: 140.5px;
-		left: 0px;
-		top: 161px;
+		width: 414px;
+		height: 138.5px;
+		left: 395px;
+		top: 2px;
 		overflow: visible;
 	}
 	#Notification_here_A1_Text_18 {
 		opacity: 1;
 		position: absolute;
-		left: 60.5px;
+		left: 79.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -136,7 +136,7 @@
 	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_19 {
 		opacity: 1;
 		position: absolute;
-		left: 19.5px;
+		left: 38.5px;
 		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
@@ -166,24 +166,24 @@
 	.divider_A1_Line_4 {
 		overflow: visible;
 		position: absolute;
-		top: 140.5px;
+		top: 137.5px;
 		left: 0px;
-		width: 375px;
-		height: 1px;
+		width: 414.002px;
+		height: 2px;
 	}
-	#Reminder_A1_Group_12 {
+	#Reminder_A1_Group_11 {
 		opacity: 1;
 		position: absolute;
-		width: 375px;
-		height: 140.5px;
+		width: 414px;
+		height: 138.5px;
 		left: 0px;
-		top: 322px;
+		top: 163px;
 		overflow: visible;
 	}
 	#Notification_here_A1_Text_20 {
 		opacity: 1;
 		position: absolute;
-		left: 60.5px;
+		left: 79.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -201,7 +201,7 @@
 	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_21 {
 		opacity: 1;
 		position: absolute;
-		left: 19.5px;
+		left: 38.5px;
 		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
@@ -231,10 +231,335 @@
 	.divider_A1_Line_5 {
 		overflow: visible;
 		position: absolute;
-		top: 140.5px;
+		top: 137.5px;
 		left: 0px;
-		width: 375px;
-		height: 1px;
+		width: 414.002px;
+		height: 2px;
+	}
+	#Reminder_A1_Group_12 {
+		opacity: 1;
+		position: absolute;
+		width: 414px;
+		height: 138.5px;
+		left: 395px;
+		top: 163px;
+		overflow: visible;
+	}
+	#Notification_here_A1_Text_22 {
+		opacity: 1;
+		position: absolute;
+		left: 79.5px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 254px;
+		height: 82px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(89,215,253,1);
+	}
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_23 {
+		opacity: 1;
+		position: absolute;
+		left: 38.5px;
+		top: 28px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
+		line-height: 16px;
+		margin-top: -2px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		color: rgba(89,215,253,1);
+	}
+	#divider_A1_Line_6 {
+		opacity: 1;
+		fill: transparent;
+		stroke: rgb(240, 240, 240);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.divider_A1_Line_6 {
+		overflow: visible;
+		position: absolute;
+		top: 137.5px;
+		left: 0px;
+		width: 414.002px;
+		height: 2px;
+	}
+	#Reminder_A1_Group_13 {
+		opacity: 1;
+		position: absolute;
+		width: 414px;
+		height: 138.5px;
+		left: 0px;
+		top: 324px;
+		overflow: visible;
+	}
+	#Notification_here_A1_Text_24 {
+		opacity: 1;
+		position: absolute;
+		left: 79.5px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 254px;
+		height: 82px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(89,215,253,1);
+	}
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_25 {
+		opacity: 1;
+		position: absolute;
+		left: 38.5px;
+		top: 28px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
+		line-height: 16px;
+		margin-top: -2px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		color: rgba(89,215,253,1);
+	}
+	#divider_A1_Line_7 {
+		opacity: 1;
+		fill: transparent;
+		stroke: rgb(240, 240, 240);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.divider_A1_Line_7 {
+		overflow: visible;
+		position: absolute;
+		top: 137.5px;
+		left: 0px;
+		width: 414.002px;
+		height: 2px;
+	}
+	#Reminder_A1_Group_14 {
+		opacity: 1;
+		position: absolute;
+		width: 414px;
+		height: 138.5px;
+		left: 395px;
+		top: 324px;
+		overflow: visible;
+	}
+	#Notification_here_A1_Text_26 {
+		opacity: 1;
+		position: absolute;
+		left: 79.5px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 254px;
+		height: 82px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(89,215,253,1);
+	}
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_27 {
+		opacity: 1;
+		position: absolute;
+		left: 38.5px;
+		top: 28px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
+		line-height: 16px;
+		margin-top: -2px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		color: rgba(89,215,253,1);
+	}
+	#divider_A1_Line_8 {
+		opacity: 1;
+		fill: transparent;
+		stroke: rgb(240, 240, 240);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.divider_A1_Line_8 {
+		overflow: visible;
+		position: absolute;
+		top: 137.5px;
+		left: 0px;
+		width: 414.002px;
+		height: 2px;
+	}
+	#Reminder_A1_Group_15 {
+		opacity: 1;
+		position: absolute;
+		width: 414px;
+		height: 138.5px;
+		left: 0px;
+		top: 485px;
+		overflow: visible;
+	}
+	#Notification_here_A1_Text_28 {
+		opacity: 1;
+		position: absolute;
+		left: 79.5px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 254px;
+		height: 82px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(89,215,253,1);
+	}
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_29 {
+		opacity: 1;
+		position: absolute;
+		left: 38.5px;
+		top: 28px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
+		line-height: 16px;
+		margin-top: -2px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		color: rgba(89,215,253,1);
+	}
+	#divider_A1_Line_9 {
+		opacity: 1;
+		fill: transparent;
+		stroke: rgb(240, 240, 240);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.divider_A1_Line_9 {
+		overflow: visible;
+		position: absolute;
+		top: 137.5px;
+		left: 0px;
+		width: 414.002px;
+		height: 2px;
+	}
+	#Reminder_A1_Group_16 {
+		opacity: 1;
+		position: absolute;
+		width: 414px;
+		height: 138.5px;
+		left: 395px;
+		top: 485px;
+		overflow: visible;
+	}
+	#Notification_here_A1_Text_30 {
+		opacity: 1;
+		position: absolute;
+		left: 79.5px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 254px;
+		height: 82px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(89,215,253,1);
+	}
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_31 {
+		opacity: 1;
+		position: absolute;
+		left: 38.5px;
+		top: 28px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
+		line-height: 16px;
+		margin-top: -2px;
+		text-align: center;
+		font-family: Gibson, "Helvetica";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		color: rgba(89,215,253,1);
+	}
+	#divider_A1_Line_10 {
+		opacity: 1;
+		fill: transparent;
+		stroke: rgb(240, 240, 240);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.divider_A1_Line_10 {
+		overflow: visible;
+		position: absolute;
+		top: 137.5px;
+		left: 0px;
+		width: 414.002px;
+		height: 2px;
 	}
 	#rectangle {
 		opacity: 1;
@@ -244,21 +569,21 @@
 		transform: matrix(1,0,0,1,0,0);
 		overflow: visible;
 		position: absolute;
-		top: 574px;
+		top: 670px;
 		left: 0px;
-		width: 359px;
+		width: 413px;
 		height: 66px;
 	}
 	#button_text {
 		opacity: 1;
 		position: absolute;
 		left: 31px;
-		top: 597px;
+		top: 693px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-		width: 299px;
+		width: 353px;
 		height: 23px;
 		line-height: 24px;
 		margin-top: -4px;
@@ -276,7 +601,7 @@
 	.Rectangle_5 {
 		position: absolute;
 		overflow: visible;
-		width: 360px;
+		width: 414px;
 		height: 72px;
 		left: 0px;
 		top: 0px;
@@ -286,7 +611,7 @@
 		position: absolute;
 		width: 56px;
 		height: 60px;
-		left: 251px;
+		left: 305px;
 		top: 12px;
 		overflow: visible;
 	}
@@ -357,7 +682,7 @@
 		font-size: 14px;
 		color: rgba(89,215,253,1);
 	}
-	#ID3__A1_Text_26 {
+	#ID3__A1_Text_36 {
 		opacity: 1;
 		position: absolute;
 		left: 27px;
@@ -380,7 +705,7 @@
 		position: absolute;
 		width: 106px;
 		height: 27px;
-		left: 130.61px;
+		left: 158.377px;
 		top: 29px;
 		overflow: visible;
 	}
@@ -407,7 +732,7 @@
 <body>
 <div id="Notification">
 	<div id="Reminder">
-		<div id="Reminder_A1_Group_10">
+		<div id="Reminder_A1_Group_9">
 			<div id="Notification_here">
 				<span>Notification here</span>
 			</div>
@@ -415,11 +740,11 @@
 				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
 			<svg class="divider">
-				<path id="divider" d="M 0 0 L 375 0">
+				<path id="divider" d="M 0 1 L 414 0">
 				</path>
 			</svg>
 		</div>
-		<div id="Reminder_A1_Group_11">
+		<div id="Reminder_A1_Group_10">
 			<div id="Notification_here_A1_Text_18">
 				<span>Notification here</span>
 			</div>
@@ -427,11 +752,11 @@
 				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
 			<svg class="divider_A1_Line_4">
-				<path id="divider_A1_Line_4" d="M 0 0 L 375 0">
+				<path id="divider_A1_Line_4" d="M 0 1 L 414 0">
 				</path>
 			</svg>
 		</div>
-		<div id="Reminder_A1_Group_12">
+		<div id="Reminder_A1_Group_11">
 			<div id="Notification_here_A1_Text_20">
 				<span>Notification here</span>
 			</div>
@@ -439,20 +764,80 @@
 				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
 			<svg class="divider_A1_Line_5">
-				<path id="divider_A1_Line_5" d="M 0 0 L 375 0">
+				<path id="divider_A1_Line_5" d="M 0 1 L 414 0">
+				</path>
+			</svg>
+		</div>
+		<div id="Reminder_A1_Group_12">
+			<div id="Notification_here_A1_Text_22">
+				<span>Notification here</span>
+			</div>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_23">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			</div>
+			<svg class="divider_A1_Line_6">
+				<path id="divider_A1_Line_6" d="M 0 1 L 414 0">
+				</path>
+			</svg>
+		</div>
+		<div id="Reminder_A1_Group_13">
+			<div id="Notification_here_A1_Text_24">
+				<span>Notification here</span>
+			</div>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_25">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			</div>
+			<svg class="divider_A1_Line_7">
+				<path id="divider_A1_Line_7" d="M 0 1 L 414 0">
+				</path>
+			</svg>
+		</div>
+		<div id="Reminder_A1_Group_14">
+			<div id="Notification_here_A1_Text_26">
+				<span>Notification here</span>
+			</div>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_27">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			</div>
+			<svg class="divider_A1_Line_8">
+				<path id="divider_A1_Line_8" d="M 0 1 L 414 0">
+				</path>
+			</svg>
+		</div>
+		<div id="Reminder_A1_Group_15">
+			<div id="Notification_here_A1_Text_28">
+				<span>Notification here</span>
+			</div>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_29">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			</div>
+			<svg class="divider_A1_Line_9">
+				<path id="divider_A1_Line_9" d="M 0 1 L 414 0">
+				</path>
+			</svg>
+		</div>
+		<div id="Reminder_A1_Group_16">
+			<div id="Notification_here_A1_Text_30">
+				<span>Notification here</span>
+			</div>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_31">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			</div>
+			<svg class="divider_A1_Line_10">
+				<path id="divider_A1_Line_10" d="M 0 1 L 414 0">
 				</path>
 			</svg>
 		</div>
 	</div>
-	<svg class="rectangle" viewBox="0 0 359 66">
-		<path id="rectangle" d="M 0 0 L 359 0 L 359 66 L 0 66 L 0 0 Z">
+	<svg class="rectangle" viewBox="0 0 413 66">
+		<path id="rectangle" d="M 0 0 L 413 0 L 413 66 L 0 66 L 0 0 Z">
 		</path>
 	</svg>
 	<div id="button_text">
 		<span>Notification</span>
 	</div>
 	<svg class="Rectangle_5">
-		<rect id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="360" height="72">
+		<rect id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="414" height="72">
 		</rect>
 	</svg>
 	<div id="comments_link">
@@ -467,7 +852,7 @@
 		<div id="notification">
 			<span>notification</span>
 		</div>
-		<div id="ID3__A1_Text_26">
+		<div id="ID3__A1_Text_36">
 			<span>3<br/></span>
 		</div>
 	</div>
