--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Main.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Main.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>SmartSchoolSystem</title>
+<title>Main</title>
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
@@ -20,8 +20,8 @@
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 360px;
-		height: 640px;
+		width: 414px;
+		height: 736px;
 		font-family: "Helvetica";
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
@@ -40,15 +40,15 @@
 		transform: matrix(1,0,0,1,0,0);
 		overflow: visible;
 		position: absolute;
-		top: 574px;
+		top: 670px;
 		left: 0px;
-		width: 360px;
+		width: 414px;
 		height: 66px;
 	}
 	#Daniel_Riko {
 		opacity: 1;
 		position: absolute;
-		left: 115.469px;
+		left: 142.58px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -68,8 +68,8 @@
 		position: absolute;
 		width: 106px;
 		height: 27px;
-		left: 127.082px;
-		top: 187.002px;
+		left: 154.099px;
+		top: 216.288px;
 		overflow: visible;
 	}
 	#main_profile {
@@ -96,7 +96,7 @@
 		width: 70px;
 		height: 60px;
 		left: 45px;
-		top: 154.987px;
+		top: 180.639px;
 		overflow: visible;
 	}
 	#notification {
@@ -152,19 +152,19 @@
 		overflow: visible;
 		width: 117px;
 		height: 116px;
-		left: 121.5px;
+		left: 148.5px;
 		top: 61px;
 	}
 	#button_text {
 		opacity: 1;
 		position: absolute;
 		left: 31px;
-		top: 600px;
+		top: 692px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-		width: 300px;
+		width: 354px;
 		height: 23px;
 		line-height: 24px;
 		margin-top: -4px;
@@ -175,25 +175,16 @@
 		font-size: 16px;
 		color: rgba(255,255,255,1);
 	}
-	#comments_link {
-		opacity: 1;
-		position: absolute;
-		width: 0px;
-		height: 0px;
-		left: 897px;
-		top: -151px;
-		overflow: visible;
-	}
 	#Group_3 {
 		opacity: 1;
 		position: absolute;
 		width: 56px;
 		height: 58px;
-		left: 240px;
-		top: 155.988px;
+		left: 282.632px;
+		top: 181.718px;
 		overflow: visible;
 	}
-	#comments_link_A0_Group_5 {
+	#comments_link {
 		opacity: 1;
 		position: absolute;
 		width: 16px;
@@ -247,16 +238,16 @@
 	.Rectangle_1 {
 		position: absolute;
 		overflow: visible;
-		width: 360px;
+		width: 414px;
 		height: 330px;
 		left: 0px;
-		top: 222.089px;
+		top: 318.089px;
 	}
 	#level___10 {
 		opacity: 1;
 		position: absolute;
-		left: 115.469px;
-		top: 245.989px;
+		left: 142.58px;
+		top: 285.947px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
@@ -273,8 +264,8 @@
 	#ID200xp__left {
 		opacity: 1;
 		position: absolute;
-		left: 115.469px;
-		top: 294.987px;
+		left: 142.58px;
+		top: 342.904px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
@@ -291,10 +282,10 @@
 	#Level_bar {
 		opacity: 1;
 		position: absolute;
-		width: 320px;
+		width: 374px;
 		height: 21px;
 		left: 20px;
-		top: 285.008px;
+		top: 329.209px;
 		overflow: visible;
 	}
 	#level_10 {
@@ -318,7 +309,7 @@
 	#level_11 {
 		opacity: 1;
 		position: absolute;
-		left: 255px;
+		left: 309px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -336,10 +327,10 @@
 	#Group_1 {
 		opacity: 1;
 		position: absolute;
-		width: 255px;
+		width: 309px;
 		height: 0px;
 		left: 52.5px;
-		top: 284.52px;
+		top: 327.199px;
 		overflow: visible;
 	}
 	#Line_1 {
@@ -357,7 +348,7 @@
 		position: absolute;
 		top: 0px;
 		left: 0px;
-		width: 260px;
+		width: 314px;
 		height: 5px;
 	}
 	#Line_2 {
@@ -375,16 +366,16 @@
 		position: absolute;
 		top: 0px;
 		left: 0px;
-		width: 214px;
+		width: 268px;
 		height: 5px;
 	}
 	#Group_4 {
 		opacity: 1;
 		position: absolute;
-		width: 320px;
+		width: 374px;
 		height: 86px;
 		left: 20px;
-		top: 369.941px;
+		top: 434.046px;
 		overflow: visible;
 	}
 	#Rectangle_8 {
@@ -400,7 +391,7 @@
 	.Rectangle_8 {
 		position: absolute;
 		overflow: visible;
-		width: 320px;
+		width: 374px;
 		height: 86px;
 		left: 0px;
 		top: 0px;
@@ -408,7 +399,7 @@
 	#Reminder {
 		opacity: 1;
 		position: absolute;
-		left: 82.458px;
+		left: 109.609px;
 		top: 11px;
 		box-sizing: border-box;
 		margin: 0;
@@ -426,7 +417,7 @@
 	#ID11_30 {
 		opacity: 1;
 		position: absolute;
-		left: 109.468px;
+		left: 136.584px;
 		top: 43px;
 		box-sizing: border-box;
 		margin: 0;
@@ -443,13 +434,13 @@
 		font-size: 12px;
 		color: rgba(101,105,216,1);
 	}
-	#Group_4_A0_Group_9 {
+	#Group_4_A0_Group_8 {
 		opacity: 1;
 		position: absolute;
-		width: 320px;
+		width: 374px;
 		height: 86px;
 		left: 20px;
-		top: 479.841px;
+		top: 575.841px;
 		overflow: visible;
 	}
 	#Rectangle_8_A0_Rectangle_3 {
@@ -465,7 +456,7 @@
 	.Rectangle_8_A0_Rectangle_3 {
 		position: absolute;
 		overflow: visible;
-		width: 320px;
+		width: 374px;
 		height: 86px;
 		left: 0px;
 		top: 0px;
@@ -473,7 +464,7 @@
 	#Notification {
 		opacity: 1;
 		position: absolute;
-		left: 82.458px;
+		left: 109.609px;
 		top: 11px;
 		box-sizing: border-box;
 		margin: 0;
@@ -497,7 +488,7 @@
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-		width: 255px;
+		width: 309px;
 		height: 32px;
 		line-height: 16px;
 		margin-top: -2px;
@@ -512,8 +503,8 @@
 </head>
 <body>
 <div id="Main">
-	<svg class="rectangle" viewBox="0 0 360 66">
-		<path id="rectangle" d="M 0 0 L 360 0 L 360 66 L 0 66 L 0 0 Z">
+	<svg class="rectangle" viewBox="0 0 414 66">
+		<path id="rectangle" d="M 0 0 L 414 0 L 414 66 L 0 66 L 0 0 Z">
 		</path>
 	</svg>
 	<div id="Daniel_Riko">
@@ -539,10 +530,8 @@
 	<div id="button_text">
 		<span>Main Profile </span>
 	</div>
-	<div id="comments_link">
-	</div>
 	<div id="Group_3">
-		<div id="comments_link_A0_Group_5">
+		<div id="comments_link">
 			<div id="ID3">
 				<span>3</span>
 			</div>
@@ -552,7 +541,7 @@
 		</div>
 	</div>
 	<svg class="Rectangle_1">
-		<rect id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="360" height="330">
+		<rect id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="414" height="330">
 		</rect>
 	</svg>
 	<div id="level___10">
@@ -571,17 +560,17 @@
 	</div>
 	<div id="Group_1">
 		<svg class="Line_1">
-			<path id="Line_1" d="M 0 0 L 255 0">
+			<path id="Line_1" d="M 0 0 L 309 0">
 			</path>
 		</svg>
 		<svg class="Line_2">
-			<path id="Line_2" d="M 0 0 L 209 0">
+			<path id="Line_2" d="M 0 0 L 263 0">
 			</path>
 		</svg>
 	</div>
 	<div id="Group_4">
 		<svg class="Rectangle_8">
-			<rect id="Rectangle_8" rx="43" ry="43" x="0" y="0" width="320" height="86">
+			<rect id="Rectangle_8" rx="43" ry="43" x="0" y="0" width="374" height="86">
 			</rect>
 		</svg>
 		<div id="Reminder">
@@ -591,9 +580,9 @@
 			<span>11:30</span>
 		</div>
 	</div>
-	<div id="Group_4_A0_Group_9">
+	<div id="Group_4_A0_Group_8">
 		<svg class="Rectangle_8_A0_Rectangle_3">
-			<rect id="Rectangle_8_A0_Rectangle_3" rx="43" ry="43" x="0" y="0" width="320" height="86">
+			<rect id="Rectangle_8_A0_Rectangle_3" rx="43" ry="43" x="0" y="0" width="374" height="86">
 			</rect>
 		</svg>
 		<div id="Notification">
